bevy_elf_macros/tests/ui/fail/from_default_and_with_spec.rs
use bevy_elf_macros::FromDef;

#[derive(FromDef)]
#[allow(unused)]
struct Foo {
    #[elf(from_default, with_spec(base_path = "foo"))]
    x: bool,
}

fn main() {}
